# flask-jsonrpc-sample

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  compose.yml  docker-compose.yml  pyproject.toml  run.py  setup.cfg  setup.py  tox.ini
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: codeql_analysis.yml  on_update.yml
apps/lms-api/: Dockerfile  Makefile  pyproject.toml
apps/lms-api/docs/: Aggregates.md
apps/lms-api/src/lms/: __init__.py  __main__.py  wsgi.py
apps/lms-api/src/lms/app/: __init__.py  errors.py  json.py
apps/lms-api/src/lms/app/exceptions/: __init__.py  acquisitions.py  catalogs.py  circulations.py  organizations.py  patrons.py  serials.py
apps/lms-api/src/lms/app/extensions/: __init__.py
apps/lms-api/src/lms/app/handlers/: catalogs.py  circulations.py  organizations.py  patrons.py
apps/lms-api/src/lms/app/rpc/: __init__.py  acquisitions.py  catalogs.py  circulations.py  organizations.py  patrons.py  serials.py
apps/lms-api/src/lms/app/schemas/: acquisitions.py  catalogs.py  patrons.py
apps/lms-api/src/lms/app/services/: __init__.py  acquisitions.py  catalogs.py  circulations.py  organizations.py  patrons.py  serials.py
apps/lms-api/src/lms/domain/: __init__.py
apps/lms-api/src/lms/domain/acquisitions/: entities.py  events.py  exceptions.py
apps/lms-api/src/lms/domain/catalogs/: entities.py  events.py  exceptions.py  repositories.py  services.py
apps/lms-api/src/lms/domain/circulations/: entities.py  events.py  exceptions.py  services.py
apps/lms-api/src/lms/domain/organizations/: entities.py  events.py  exceptions.py  services.py
apps/lms-api/src/lms/domain/patrons/: entities.py  events.py  exceptions.py  repositories.py  services.py
apps/lms-api/src/lms/domain/serials/: entities.py  events.py  exceptions.py
apps/lms-api/src/lms/infrastructure/: __init__.py
apps/lms-api/src/lms/infrastructure/database/: __init__.py  db.py
apps/lms-api/tests/unit/app/handlers/: test_catalogs.py  test_circulations.py  test_init.py  test_organizations.py  test_patrons.py
apps/lms-api/tests/unit/app/rpc/: test_acquisitions.py  test_app.py  test_catalogs.py  test_circulations.py  test_organizations.py  test_patrons.py  test_serials.py
apps/lms-api/tests/unit/app/schemas/: test_catalogs.py  test_serials.py
apps/lms-api/tests/unit/app/services/: test_acquisitions.py  test_catalogs.py  test_circulations.py  test_organizations.py  test_patrons.py  test_serials.py
apps/lms-api/tests/unit/domain/acquisitions/: test_entities.py  test_entities.py.bak  test_entities.py.bak2
apps/lms-api/tests/unit/domain/catalogs/: test_entities.py  test_services.py
apps/lms-api/tests/unit/domain/circulations/: test_entities.py  test_services.py
apps/lms-ui/: .env.production.sample  Dockerfile  README.md  package-lock.json  package.json
apps/lms-ui/app/: layout.tsx  page.tsx
apps/lms-ui/app/branches/: page.tsx
apps/lms-ui/app/branches/new/: page.tsx
apps/lms-ui/app/catalog/: page.tsx
apps/lms-ui/app/catalog/new/: page.tsx
apps/lms-ui/app/circulation/: page.tsx
apps/lms-ui/app/circulation/checkout/: page.tsx
apps/lms-ui/app/patrons/: page.tsx
apps/lms-ui/app/patrons/new/: page.tsx
apps/lms-ui/app/staff/: page.tsx
apps/lms-ui/app/staff/new/: page.tsx
apps/lms-ui/components/: providers.tsx  sidebar.tsx
apps/lms-ui/components/ui/: button.tsx  card.tsx  input.tsx  table.tsx
apps/lms-ui/docs/: IMPLEMENTATION.md  QUICKSTART.md
apps/lms-ui/lib/: api-client.ts  schemas.ts  utils.ts
apps/lms-ui/lib/api/: catalogs.ts  circulations.ts  organizations.ts  patrons.ts
docs/: DER.mermaid.txt  DomainEvents.md  Lifecycle.md
requirements/: base.txt  local.txt  production.txt  typing.txt
src/lms/: __init__.py  __main__.py  app.py  config.py  wsgi.py
src/lms/app/: __init__.py  main.py
src/lms/app/extensions/: __init__.py
src/lms/app/extentions/: __init__.py
src/lms/app/handlers/: __init__.py  catalogs.py  circulations.py  organization.py
src/lms/app/routes/: __init__.py  monitoring.py
src/lms/app/rpc/: __init__.py  acquisitions.py  catalogs.py  circulations.py  organization.py  patrons.py  serials.py
src/lms/app/schemas/: __init__.py  catalogs.py  circulations.py  organization.py  organizations.py  patrons.py  serials.py
src/lms/app/services/: __init__.py  catalogs.py  circulations.py  organization.py  serials.py
src/lms/domain/: __init__.py
src/lms/domain/acquisitions/: entities.py  events.py  exceptions.py  repositories.py
src/lms/domain/catalogs/: events.py  exceptions.py
src/lms/domain/circulations/: entities.py  repositories.py
src/lms/domain/organization/: entities.py  exceptions.py  repositories.py  services.py
src/lms/domain/organizations/: events.py
src/lms/domain/patrons/: entities.py  events.py  services.py
src/lms/domain/serials/: entities.py  repositories.py
src/lms/infrastructure/database/: db.py
src/lms/infrastructure/database/mappers/: acquisitions.py  circulations.py  organization.py  patrons.py  serials.py
src/lms/infrastructure/database/models/: acquisitions.py  catalogs.py  circulations.py  organization.py  organizations.py  patrons.py  serials.py
src/lms/infrastructure/database/repositories/: catalogs.py  circulations.py  organization.py  organizations.py  patrons.py  serials.py
src/lms/infrastructure/event_bus/: __init__.py
src/lms/infrastructure/logging/: __init__.py
tests/unit/: conftest.py  factories.py  test_acquisitions.py  test_catalogs.py  test_circulations.py  test_organization.py  test_patrons.py  test_serials.py
tests/unit/app/handlers/: test_catalogs.py  test_circulations.py  test_organizations.py  test_patrons.py
tests/unit/app/routes/: test_monitoring.py
tests/unit/app/rpc/: test_acquisitions.py  test_app.py  test_catalogs.py  test_circulations.py  test_organizations.py  test_patrons.py
tests/unit/app/schemas/: test_acquisitions.py  test_circulations.py  test_organizations.py  test_patrons.py
tests/unit/app/services/: test_acquisitions.py  test_catalogs.py  test_circulations.py  test_patrons.py
(+36 files in other folders)
